<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Inmuebles">Inmuebles</string>
    <string name="Inquilino">Inquilinos</string>

    <string name="title_activity_login" />

    <string name="Contratos" >Contratos</string>
    <string name="Salir">Salir</string>
    <string name="Perfil">Perfil</string>
    <string name="Inicio" >Inicio  </string>
    <string name="Inmobiliaria" />

</resources>