<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mapaFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Inicio" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Inmuebles" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Inquilino" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Perfil" />

        <item
            android:id="@+id/contratoFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Contratos"/>


        <item
            android:id="@+id/salirFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Salir"
            tools:ignore="DuplicateIds" />

    </group>
</menu>